better AboutUs and Contact

--- a/public/index.html
+++ b/public/index.html
@@ -12,9 +12,8 @@
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css" integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS"
     crossorigin="anonymous" />
-
-
-  <title>BAKERS PERFORMANCE INDEX</title>
+  <title>Bakers Performance Index: We Track Bakers Delivery </title>
+  <meta name="description" content="We bring transparency in the Tezos baking industry. We delegated xtz to baking services and we track rewards delivery. Get full info here." />
 </head>
 
 <body>
